# task-cli

./: .gitignore  README.md  pyproject.toml
src/task_cli/: __init__.py  cli.py  constants.py  file_functions.py  list_commands.py  list_functions.py
