[project]
name = "task-cli"
version = "0.3.0"
description = "CLI tool to keep track of personal tasks with json files."
readme = "README.md"
authors = [
    { name = "DeusWyvern", email = "dpefley98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
task-cli = "task_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
